# ChangeLog for dev-util/subversion
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.242 2006/10/20 21:15:11 kloeri Exp $

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  subversion-1.3.2-r3.ebuild:
  Stable on Alpha.

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> subversion-1.4.0.ebuild:
  Added ~sparc-fbsd keyword.

  16 Oct 2006; Jason Wever <weeve@gentoo.org> subversion-1.3.2-r3.ebuild:
  Stable on SPARC.

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  subversion-1.3.2-r3.ebuild:
  ppc stable. bug #147254

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  subversion-1.3.2-r3.ebuild:
  hppa stable

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  subversion-1.3.2-r3.ebuild:
  Stabilizing on amd64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  subversion-1.3.2-r3.ebuild:
  Stabilizing on ppc64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Jackson <tsunam@gentoo.org>
  subversion-1.3.2-r3.ebuild:
  New java stable on x86; bug #147254

  01 Oct 2006; Guy Martin <gmsoft@gentoo.org> subversion-1.3.2-r1.ebuild:
  Stable on hppa.

  12 Sep 2006; Bryan Østergaard <kloeri@gentoo.org>
  subversion-1.4.0.ebuild:
  Revert ia64 keyword back to ~ia64, bug 147268.

  12 Sep 2006; Joshua Kinard <kumba@gentoo.org> subversion-1.4.0.ebuild:
  Placed 1.4.0 into mips unstable.  Bug #147268.

*subversion-1.4.0 (08 Sep 2006)

  08 Sep 2006; Paul de Vrieze <pauldv@gentoo.org>
  +files/subversion-1.4-db4.patch, +subversion-1.4.0.ebuild:
  A new upstream major version. This version introduces a number of big changes. 
  The most significant is that there is a new working copy format that is 
  transparently updated. It can however not transparently downgrade!

  03 Sep 2006; Joshua Kinard <kumba@gentoo.org> subversion-1.3.2-r3.ebuild:
  Marked stable on mips.
