@@ -53,6 +53,7 @@ SHA256 b4979d5df9fba02dbc8ad71d813229222e95ee1e8e89dec3060611d2d6be87aa files/vc
 DIST subversion-1.2.3.tar.bz2 7238176 RMD160 46de1455fb61a5814b9d67bada10216e70ea6795 SHA1 513a217ba4a8045ea3daba5c3b0816f80ce0041b SHA256 af25cf282c9f5605148e223699fcf3e78f13bab70a3f9a3a8f4e626098ed1cd2
 DIST subversion-1.3.2.tar.bz2 6834364 RMD160 dc9fbe683379ce25a62b91810eb5652ead19abcf SHA1 688ab178db1f6acb2ad3bd99f030402621f837b6 SHA256 805cb0ee894d2c219fe979dde98ccd56c06de6c3ca3986d87c80a2a2bcc08185
 DIST subversion-1.4.0.tar.bz2 4709293 RMD160 18ba1f5678fe121ce6f685fc7edf546f113c46d2 SHA1 92671bba140e9b9e300b5ffb526c4a7c59aeb5b1 SHA256 6960ed42174be9c54853e8708cc91a7c8355b23c4c3921a6d7fe7947d50843e4
+DIST subversion-1.4.2.tar.bz2 4714508 RMD160 8c6f7e73fbc9caed8b6ac7af8361eb4aad6efe71 SHA1 349847a97ad790cb14ad15bfd7bfe5bc5a9c8837 SHA256 7fe21c880e2a7591740730185fc6b32faeae15e79ccd7a336cd41589536ec4e9
 EBUILD subversion-1.2.3-r3.ebuild 11811 RMD160 173208fe152afc64192181ff7c9d906db1574e18 SHA1 4b294c7693e3ca033da32e355b09a45edf8859e2 SHA256 abb7ec4a8609f03c341a22a0e548b09a8bf20664e8ca115060c8e2f6a7abe530
 MD5 2ed68c2bda21636514c17a5b2dfc4ab6 subversion-1.2.3-r3.ebuild 11811
 RMD160 173208fe152afc64192181ff7c9d906db1574e18 subversion-1.2.3-r3.ebuild 11811
@@ -65,10 +66,14 @@ EBUILD subversion-1.4.0.ebuild 11638 RMD160 c273b471625838a83014ecbd6aa4b6e7d32e
 MD5 b432f2656335c2c2aba50e08fd7ed53b subversion-1.4.0.ebuild 11638
 RMD160 c273b471625838a83014ecbd6aa4b6e7d32ef23e subversion-1.4.0.ebuild 11638
 SHA256 6a621275b2483baaf9e1c59414514fecf06551a92d4f9022eeee03099c655daf subversion-1.4.0.ebuild 11638
-MISC ChangeLog 40778 RMD160 13c5c493dcda87ec83d24835d361e4f15f903c83 SHA1 6b78740ab2f475637e99bf9a3a06de923b23b3b5 SHA256 28b355ad7a457dc53e2d1af6eb4aa8862c498f128d687f40705fdd3c4f53de36
-MD5 a54aa8247b8e5a5ef4334ac18cf1b967 ChangeLog 40778
-RMD160 13c5c493dcda87ec83d24835d361e4f15f903c83 ChangeLog 40778
-SHA256 28b355ad7a457dc53e2d1af6eb4aa8862c498f128d687f40705fdd3c4f53de36 ChangeLog 40778
+EBUILD subversion-1.4.2.ebuild 11856 RMD160 9ea398bfe67c248b17caf9527c4dbd3069546800 SHA1 ad530702fbe373533d0df70ac971368c9a17e54e SHA256 8d1babe0a1b881083c290fabd05d83df5a09def02307e0be32ed09b9078d4d73
+MD5 4ba8e0d4966310abbc0a924b5e5285d1 subversion-1.4.2.ebuild 11856
+RMD160 9ea398bfe67c248b17caf9527c4dbd3069546800 subversion-1.4.2.ebuild 11856
+SHA256 8d1babe0a1b881083c290fabd05d83df5a09def02307e0be32ed09b9078d4d73 subversion-1.4.2.ebuild 11856
+MISC ChangeLog 41114 RMD160 d76def52398c4226c953b6172e6fc46bf9d0f452 SHA1 8dc55474f81099135682b812326311dc3830b72a SHA256 6e5c9486b58b033668734ea253bc1663cd1ec783a0865caf6f00f2d099344576
+MD5 8566232ab5765ffa40fe9e05ecf66aed ChangeLog 41114
+RMD160 d76def52398c4226c953b6172e6fc46bf9d0f452 ChangeLog 41114
+SHA256 6e5c9486b58b033668734ea253bc1663cd1ec783a0865caf6f00f2d099344576 ChangeLog 41114
 MISC metadata.xml 222 RMD160 b21e9d4420a67a847d490dc86a587e1d5f21fff0 SHA1 76e56ef0ec9c71b3032d1c501e358dd80fa1664b SHA256 4710a38e11b23d4355a7a0cba621d9680e2148aa173528491e88903487e93152
 MD5 8fbcd267012fd1eef74d5161888cc7b8 metadata.xml 222
 RMD160 b21e9d4420a67a847d490dc86a587e1d5f21fff0 metadata.xml 222
@@ -82,3 +87,6 @@ SHA256 b77de6fcac8e868c91fb08f21a08d8e45e26d50f7efa510c9940722746b37cc5 files/di
 MD5 7025f60815e7fd5e8c8648a9fa66b7b8 files/digest-subversion-1.4.0 256
 RMD160 722d37a621303768280ad75e7aa4bbbbc2a897f4 files/digest-subversion-1.4.0 256
 SHA256 bd7fb04b6ddb693ea64dbcaca64d1518705722da5a2a7bfb9bc22ccace19cd12 files/digest-subversion-1.4.0 256
+MD5 783368cc0ffe58e31c4f6557a17db45b files/digest-subversion-1.4.2 256
+RMD160 242b7ae279b98b63ce6ad5d7d10e31a92e270416 files/digest-subversion-1.4.2 256
+SHA256 d9f968207d11d28aae086e2a818ddfec68a0f4848280c131e32342b9d98f495f files/digest-subversion-1.4.2 256
