@@ -1,0 +1,3 @@
+MD5 edebb06afb3266d09e75f728a8259677 subversion-1.4.2.tar.bz2 4714508
+RMD160 8c6f7e73fbc9caed8b6ac7af8361eb4aad6efe71 subversion-1.4.2.tar.bz2 4714508
+SHA256 7fe21c880e2a7591740730185fc6b32faeae15e79ccd7a336cd41589536ec4e9 subversion-1.4.2.tar.bz2 4714508
