@@ -1,6 +1,14 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.242 2006/10/20 21:15:11 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.243 2006/11/18 20:45:55 pauldv Exp $
+
+*subversion-1.4.2 (14 Nov 2006)
+
+  14 Nov 2006; Paul de Vrieze <pauldv@gentoo.org> +files/svnserve.confd2,
+  +subversion-1.4.2.ebuild:
+  New upstream version. Also no longer assume the apache user exists in the
+  config function. Thanks to Olivier Rolland<billl@users.sf.net> and Yuval
+  Yaari <yuval@gentoo.org> for the bug (#123802)
 
   20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
   subversion-1.3.2-r3.ebuild:
